--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -15,7 +15,7 @@ RUN go mod download
 
 COPY . .
 
-RUN CGO_ENABLED=0 GOOS=$OS GOARCH=$ARCH go build -o server
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -o server
 
-EXPOSE $PORT
+EXPOSE 10000
 ENTRYPOINT ["./server"]
